<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>raisin_rf</name>
    <version>0.0.0</version>
    <description>Raisin RF</description>
    <maintainer email="moonk127@kaist.ac.kr">moonkdas</maintainer>
    <maintainer email="awesomericky@kaist.ac.kr">awesomericky</maintainer>
    <license>RAILAB License</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
